--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,24 @@
-version: 2
+# version: 2
+# jobs:
+#   build:
+#     docker:
+#       - image: circleci/python:3.7.4
+#     steps:
+#       - checkout
+#       - run: print("Hello World")
+    
+
+version: 2.1
+orbs:
+  node: circleci/node@1.1
 jobs:
   build:
-    docker:
-      - image: circleci/python:3.7.4
+    executor:
+      name: node/default
+      tag: '10.4'
     steps:
       - checkout
-      - run: print("Hello World")
-    
+      - node/with-cache:
+          steps:
+            - run: npm install
+      - run: npm run test
