--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,7 @@
 version: 2.1
-jobs:
-  build:
-    docker:
-      - image: circleci/python:3.7.4
-    steps:
-      - checkout
-      - run: print("Hello World")
+orbs:
+    hello: circleci/hello-build@0.0.5
+workflows:
+    "Hello Workflow":
+        jobs:
+          - hello/hello-build
